@@ -1,3 +1,4 @@
+* #2736: Added status bar showing mesh events (morgs)
 * Allow multiple votes on one XO (morgs)
 
 7
